parser2/simplejava.java
/* simplejava.java */
/* Generated By:JavaCC: Do not edit this line. simplejava.java */
public class simplejava implements simplejavaConstants {

  static final public ASTOperatorExpression incrementstatement(ASTVariable variable) throws ParseException {
    jj_consume_token(ADD);
{if ("" != null) return new ASTOperatorExpression(new ASTVariableExpression(variable, variable.line()), new ASTIntegerLiteral(1, variable.line()), "+", variable.line());}
    throw new Error("Missing return statement in function");
  }

  static final public ASTOperatorExpression decrementstatement(ASTVariable variable) throws ParseException {
    jj_consume_token(MINUSMINUS);
{if ("" != null) return new ASTOperatorExpression(new ASTVariableExpression(variable, variable.line()), new ASTIntegerLiteral(1, variable.line()), "-", variable.line());}
    throw new Error("Missing return statement in function");
  }

  static final public void program() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      classdefinitions();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      functionprototypeordefinition();
    }
    jj_consume_token(0);
  }

  static final public ASTFunctionDefinition functionprototypeordefinition() throws ParseException {Token type; Token name; ASTFormals formals = new ASTFormals(); ASTStatements body = new ASTStatements(); int line; ASTEmptyStatement semicolonchecker = null; ASTStatement returnedstatement = null;
    type = jj_consume_token(IDENTIFIER);
    name = jj_consume_token(IDENTIFIER);
    jj_consume_token(LEFT_PARENTHESIS);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFIER:{
      formals = formalparameterlist();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    jj_consume_token(RIGHT_PARENTHESIS);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SEMICOLON:{
      semicolonchecker = emptystatement();
      break;
      }
    case LEFT_BRACE:{
      jj_consume_token(LEFT_BRACE);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case FOR:
        case IF:
        case WHILE:
        case DO:
        case RETURN:
        case SEMICOLON:
        case LEFT_BRACE:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
        returnedstatement = statement();
body.addElement(returnedstatement);
      }
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
if (semicolonchecker != null) {
                {if ("" != null) return new ASTPrototype(type.image, name.image, formals, type.beginLine);}
        }else {
                {if ("" != null) return new ASTFunction(type.image, name.image, formals, body, type.beginLine);}
        }
    throw new Error("Missing return statement in function");
  }

  static final public void functionendingafterparen() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SEMICOLON:{
      jj_consume_token(SEMICOLON);
      break;
      }
    case LEFT_BRACE:{
      jj_consume_token(LEFT_BRACE);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case FOR:
        case IF:
        case WHILE:
        case DO:
        case RETURN:
        case SEMICOLON:
        case LEFT_BRACE:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          break label_4;
        }
        statement();
      }
      jj_consume_token(RIGHT_BRACE);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public ASTFormals formalparameterlist() throws ParseException {ASTFormals formals = null; ASTFormal formal = null;
    formal = formalparameter();
if (formal != null) {formals = new ASTFormals(formal);}
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      formal = formalparameter();
    }
if (formal != null) {formals.addElement(formal);}
if (formals != null) {
                {if ("" != null) return formals;}
        }
    throw new Error("Missing return statement in function");
  }

  static final public ASTFormal formalparameter() throws ParseException {ASTFormal returnformal = null; Token type; Token name; boolean checker = false;
    type = jj_consume_token(IDENTIFIER);
    name = jj_consume_token(IDENTIFIER);
    variabledeclarations();
if (checker == true) {
                returnformal = new ASTFormal(type.image, name.image, type.beginLine);
        }
if (returnformal != null) {
                {if ("" != null) return returnformal;}
        }
    throw new Error("Missing return statement in function");
  }

  static final public int variabledeclarations() throws ParseException {int counter = 0;
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LEFT_BRACKET:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_6;
      }
      jj_consume_token(LEFT_BRACKET);
      jj_consume_token(RIGHT_BRACKET);
counter++;
    }
{if ("" != null) return counter;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTInstanceVariableDefs variabledefinitions() throws ParseException {ASTInstanceVariableDefs variabledefs = new ASTInstanceVariableDefs(); ASTInstanceVariableDef variabledef = null; int counter = 0; Token type; Token name;
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_7;
      }
      type = jj_consume_token(IDENTIFIER);
      name = jj_consume_token(IDENTIFIER);
      counter = variabledeclarations();
      jj_consume_token(SEMICOLON);
if (counter == 0) {
                variabledef = new ASTInstanceVariableDef(type.image, name.image, type.beginLine);
                variabledefs.addElement(variabledef);
        } else {
                variabledef = new ASTInstanceVariableDef(type.image, name.image, counter, type.beginLine);
                variabledefs.addElement(variabledef);
        }
    }
{if ("" != null) return variabledefs;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression expressionlist(String nameoffunction, Token variabletoken) throws ParseException {ASTExpression expressioncatch; ASTFunctionCallExpression funccall;
System.out.println("HIT IN EXPRESSIONLIST.");
funccall=new ASTFunctionCallExpression(nameoffunction, variabletoken.beginLine);
    expressioncatch = expression();
funccall.addElement(expressioncatch);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_8;
      }
      jj_consume_token(COMMA);
      expressioncatch = expression();
funccall.addElement(expressioncatch);
    }
{if ("" != null) return funccall;}
    throw new Error("Missing return statement in function");
  }

  static final public void statementlist() throws ParseException {
    statement();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FOR:
      case IF:
      case WHILE:
      case DO:
      case RETURN:
      case SEMICOLON:
      case LEFT_BRACE:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_9;
      }
      statement();
    }
  }

  static final public ASTVariable variable(ASTVariable passedinvar) throws ParseException {ASTVariable var = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LEFT_BRACKET:
    case PERIOD:{
      var = followsvariables(passedinvar);
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      ;
    }
{if ("" != null) return var;}
    throw new Error("Missing return statement in function");
  }

  static final public void followsclassdefinitionstypes() throws ParseException {
    jj_consume_token(LEFT_BRACKET);
    label_10:
    while (true) {
      followsbracketsone();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TRUE:
      case FALSE:
      case NEW:
      case MINUS:
      case NOT:
      case LEFT_PARENTHESIS:
      case INTEGER_LITERAL:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        break label_10;
      }
    }
  }

  static final public ASTClass classdefinitions() throws ParseException {ASTClass astclass = null; Token stringt; ASTInstanceVariableDefs variabledefs = null;
    jj_consume_token(CLASS);
    stringt = jj_consume_token(IDENTIFIER);
    jj_consume_token(LEFT_BRACE);
    variabledefs = variabledefinitions();
    jj_consume_token(RIGHT_BRACE);
astclass = new ASTClass(stringt.image, variabledefs, stringt.beginLine);
{if ("" != null) return astclass;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTStatement statement() throws ParseException {ASTForStatement forstatement; ASTDoWhileStatement dowhile; ASTStatement body; ASTAssignmentStatement assignstate; ASTVariable avariable = null; Token arrayvariabletoken = null; ASTExpression expression = null; int bracketcounter= 0; Token generaltoken; ASTVariable passedinvariable; ASTStatements returner = new ASTStatements();
ASTVariable bvariable = null; ASTBaseVariable basevariable = null; ASTIfStatement ifstatement;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DO:{
      dowhile = dowhilestatement();
{if ("" != null) return dowhile;}
      break;
      }
    case RETURN:{
      generaltoken = jj_consume_token(RETURN);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TRUE:
      case FALSE:
      case NEW:
      case MINUS:
      case NOT:
      case LEFT_PARENTHESIS:
      case INTEGER_LITERAL:
      case IDENTIFIER:{
        expression = expression();
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOLON);
{if ("" != null) return new ASTReturnStatement(expression, generaltoken.beginLine);}
      break;
      }
    case WHILE:{
      generaltoken = jj_consume_token(WHILE);
      jj_consume_token(LEFT_PARENTHESIS);
      expression = expression();
      jj_consume_token(RIGHT_PARENTHESIS);
      body = statement();
{if ("" != null) return new ASTWhileStatement(expression, body, generaltoken.beginLine);}
      break;
      }
    case IF:{
      generaltoken = jj_consume_token(IF);
      ifstatement = ifstatement();
{if ("" != null) return ifstatement;}
      break;
      }
    case FOR:{
      forstatement();
      break;
      }
    case LEFT_BRACE:{
      jj_consume_token(LEFT_BRACE);
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case FOR:
        case IF:
        case WHILE:
        case DO:
        case RETURN:
        case SEMICOLON:
        case LEFT_BRACE:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          break label_11;
        }
        statement();
      }
      jj_consume_token(RIGHT_BRACE);
      break;
      }
    case IDENTIFIER:{
      generaltoken = jj_consume_token(IDENTIFIER);
passedinvariable = new ASTBaseVariable(generaltoken.image, generaltoken.beginLine);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        arrayvariabletoken = jj_consume_token(IDENTIFIER);
        bracketcounter = variabledeclarations();
avariable = new ASTBaseVariable(arrayvariabletoken.image, arrayvariabletoken.beginLine);
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        bvariable = variable(/* MAKE SURE TO MAKE CHANGES, was semicolon before but now is emptystatement because they mean the same thing */
                passedinvariable);
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LEFT_PARENTHESIS:
      case GETS:
      case ADD:
      case MINUSMINUS:{
        expression = followsvariablenames(generaltoken);
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        ;
      }
      emptystatement();
/*This handles the case: int a; */
                if (bracketcounter == 0 && bvariable == null && expression == null) {
                        {if ("" != null) return new ASTVariableDefStatement(generaltoken.image, arrayvariabletoken.image, generaltoken.beginLine);}
                }
                /* This handles the case: a = 4 + 3; */
                if (bracketcounter == 0 && bvariable == null && expression != null && avariable == null) {
                        basevariable = new ASTBaseVariable(generaltoken.image, generaltoken.beginLine);
                        {if ("" != null) return new ASTAssignmentStatement(basevariable, expression, generaltoken.beginLine);}
                }
                /* This handles the case: a[3]=4+3; */
                if (bracketcounter != 0 && bvariable != null && expression != null && avariable == null) {
                        basevariable = new ASTBaseVariable(generaltoken.image, generaltoken.beginLine);
                        {if ("" != null) return new ASTAssignmentStatement(basevariable, expression, generaltoken.beginLine);}
                }
                /* This handles the case: int x = 5 + 3;*/
                if (bracketcounter == 0 && bvariable == null && expression != null) {
                        {if ("" != null) return new ASTVariableDefStatement(generaltoken.image, arrayvariabletoken.image, expression,generaltoken.beginLine);}
                }
                /* This handles the case: int z[]; */
                if (bracketcounter != 0 && bvariable == null && expression == null) {
                        {if ("" != null) return new ASTVariableDefStatement(generaltoken.image, arrayvariabletoken.image, bracketcounter,generaltoken.beginLine);}
                }
                /* This handles the case: int z[3][] = 4 + 2; */
                if (bracketcounter != 0 && bvariable == null && expression != null) {
                        {if ("" != null) return new ASTVariableDefStatement(generaltoken.image, arrayvariabletoken.image, bracketcounter, expression, generaltoken.beginLine);}
                }
                /* This handles the case: */
                if (arrayvariabletoken == null && bvariable != null && expression != null) {
                        System.out.println("HIT HERE HERE");
                        {if ("" != null) return new ASTAssignmentStatement(bvariable, expression, generaltoken.beginLine);}
                }
                if (expression == null || bvariable == null) {System.out.println("HIT HERE"); {if ("" != null) return null;}}
                else {{if ("" != null) return new ASTAssignmentStatement(avariable, expression, arrayvariabletoken.beginLine);}}
      break;
      }
    case SEMICOLON:{
      emptystatement();
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }
